--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/polyfill": "^7.4.3",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "raw-loader": "^2.0.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-images-upload": "^1.2.6",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
