--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@babel/polyfill": "^7.4.3",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "echarts": "^4.2.1",
+    "echarts-for-react": "^2.0.15-beta.0",
     "raw-loader": "^2.0.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
