--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-images-upload": "^1.2.6",
+    "react-rating": "^1.7.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-swipeable-views": "^0.13.1"
